<resources>
    <string name="app_name">Testing</string>
    <string name="delivery_location">Delivery Location:</string>
    <string name="pickup_location">PickUp Location:</string>
    <string name="status">Status:</string>
    <string name="company">Company:</string>
    <string name="full_load">Full Load</string>
    <string name="convered_vehicle">Convered Vehicle</string>
    <string name="volumetric">Volumetric</string>
    <string name="length">Length</string>
    <string name="breadth">Breadth</string>
    <string name="height">Height</string>
    <string name="weight_tons">Weight(Tons)</string>
    <string name="budget">Budget</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="send_request_to">Send Request To</string>
    <string name="all_my_transporters">All My Transporters</string>
    <string name="select_transporters">Select Transporters</string>
    <string name="waybill">Way Bill</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="next_step">Next Step</string>
    <string name="consignee_name">Consignee Name</string>
    <string name="pickup_date_time">Pickup Date/Time</string>
    <string name="drop_location">Drop Location</string>
    <string name="drop_postal_code">Drop Postal Code</string>
    <string name="drop_date_time">Drop Date/Time</string>
    <string name="pickup_postal_code">Pickup Postal Code</string>
    <string name="pickup">Pickup:</string>
    <string name="delivery">Delivery:</string>
    <string name="sort">Sort:</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="enter_the_otp_number">Enter the OTP Number</string>
    <string name="send_the_otp">Send the OTP</string>
    <string name="validate_the_otp">Validate the OTP</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_time">Date-Time:</string>
    <string name="weight">Weight:</string>
    <string name="size">Size:</string>
    <string name="full_load_cov_vehicle">Full Load/cov vehicle:</string>
    <string name="action">Action:</string>
    <string name="location">Location</string>
    <string name="message">Message</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="user">USER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="activity_a">Log Out</string>
    <string name="back">Back</string>
    <string name="activity_button">Add a New Request</string>
    <string name="location_icon">Location Icon</string>
    <string name="cargo_icpn">Cargo Icon</string>
</resources>
