<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- Check box Full load-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBox_full_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_weight="0.01" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="4dp"
                android:text="@string/full_load" />

        </LinearLayout>

        <!-- Check box convered vehicle-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBox_convered_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_weight="0.01" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="4dp"
                android:text="@string/convered_vehicle" />

        </LinearLayout>

        <!-- Check box Volumetric-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBox_Volumetric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_weight="0.01" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="4dp"
                android:text="@string/volumetric" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/length"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/input_breadth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/breadth"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/input_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint="@string/height"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <!-- Weight Tons -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_weight_tons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_tons"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Budget -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budget"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Vehicle Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_type"
                android:textAlignment="gravity"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

        </LinearLayout>

        <!-- Send Request-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/send_request_to"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/radio_all_my_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/all_my_transporters" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/radio_Select_Transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select_transporters" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp" />

        <!-- Way Bill -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_waybill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/waybill"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Remarks -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_remark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/remarks"
                android:inputType="text"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>

        <!--Save Button-->
        <Button
            android:id="@+id/btn_booking_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="16dip" />
    </LinearLayout>
</ScrollView>